h1. CHANGELOG

h3. 1.0.0 January 9, 2014

* generate Devise views (login view)
* change generator commands (described in README)
* Haml Foundation 5 topbar syntax correction (fixes #11) (contributed by i5okie)

h3. 0.5.11 January 5, 2014

* fix Devise navigation links (when there is no 'has_role?' for authorization)

h3. 0.5.10 January 1, 2014

* add Devise navigation links for Haml or Slim (contributed by Brad Carson)
* fix formatting of flash message alert box for Slim (contributed by Brad Carson)

h3. 0.5.9 December 26, 2013

* fix error in slim templates for doctype (contributed by ayamomiji)

h3. 0.5.8 December 15, 2013

* remove 'app/views/layouts/application.html.erb' file before creating a new one
* fix error in slim templates for 'app_name.underscore.titleize'

h3. 0.5.7 December 15, 2013

* add Slim templates (contributed by benedictleejh)
* change all references from 'Twitter Bootstrap' to 'Bootstrap'

h3. 0.5.6 November 23, 2013

* minor tweak for Zurb Foundation

h3. 0.5.5 November 22, 2013

* fixes for Zurb Foundation 5.0

h3. 0.5.4 November 22, 2013

* support for Zurb Foundation 5.0

h3. 0.5.3 November 18, 2013

* better comments

h3. 0.5.2 November 18, 2013

* fix mixin names

h3. 0.5.1 November 18, 2013

* make it clear that the mixins are just examples

h3. 0.5.0 November 11, 2013

* use mixins for uniform layout across frameworks

h3. 0.4.2 November 9, 2013

* move 'Home' link to conform to framework examples
* add responsive navbar for Bootstrap 2.3

h3. 0.4.1 November 9, 2013

* add option to generate navigation links for Devise

h3. 0.4.0 November 9, 2013

* separate file for navigation links; isolate framework-specific markup in navigation partial

h3. 0.3.0 November 9, 2013

* create a file 'framework_and_overrides' instead of 'bootstrap_and_overrides' or 'foundation_and_overrides'

h3. 0.2.2 November 2, 2013

* remove 'container' div from Bootstrap 3 application layout (issue #1)

h3. 0.2.1 November 2, 2013
