@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 1.0.1 January 9, 2014
+
+* generate Devise views (new account, edit account, forgot password)
+
 h3. 1.0.0 January 9, 2014
 
 * generate Devise views (login view)
